<resources>
    <string name="app_name">Find A Shop</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="srch">Search</string>
    <string name="title_activity_maps">Map</string>
    <string name="otp_sent_success" />
    <string name="route_distance">Distance</string>
    <string name="route_distance_value">0 Km</string>
    <string name="route_duration">Duration</string>
    <string name="route_duration_value">0 mins</string>
    <string name="server_error">Server error. Something when wrong with the server</string>


    <string name="facebook_app_id">1520238038069950</string>


    <string name="String_Name"> Name</string>
    <string name="String_Email"> Email</string>
    <string name="String_Contact_Number"> Mobile Number</string>
    <string name="String_Password"> Password</string>
    <string name="String_Confirm_Password">Confirm Password</string>
    <string name="String_Submit">Submit</string>
    <string name="String_signup">Register</string>
    <string name="String_user_name"> Mobile Number</string>
    <string name="String_password"> Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="String_login">Login</string>
    <string name="todo">TODO</string>
    <string name="btn_confirm">Confirm</string>
    <string name="string_confirm">Confirmation</string>
    <string name="btn_edit">Cancel</string>
    <string name="String_Date"> Date of Birth</string>
    <string name="string_or">OR</string>
    <string name="dateofbirth">Date of birth</string>

    <string name="String_Update">UPDATE</string>
    <string name="profile">Profile</string>
    <string name="title_activity_item_location">Map</string>
    <string name="default_directory">Pictures</string>


    <string name="progress_title">Processing..</string>

    <string name="done">Done</string>


    <string-array name="tab_titles">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>

    <string name="custom_title">Custom Title</string>

    <string name="toolbar_title">Choice Image</string>
    <string name="no_image">No Image</string>

    <string name="selected_image">Selected Image</string>


    <string name="max_count_msg">%1$d images selected already</string>
    <string name="min_count_msg">you have to choice %1$d images</string>

    <string name="focusing">focusing/flash...wait a minute</string>
    <string name="dialog_fire_missiles">Do</string>
    <string name="fire">ok</string>
    <string name="cancel">cancel</string>
    <string name="select_string">Select</string>
    <string name="string_shop_post">AddShopPost</string>
    <string name="string_sign_up">Register</string>
    <string name="string_sub_category">SubCategory</string>
    <string name="string_shop_list">ShopList</string>
    <string name="string_shop_posts">Shop Post</string>
    <string name="string_shop_details">Shop Details</string>
    <string name="string_image_gallary">Image Gallary</string>
    <string name="string_update_post">Update Post</string>
    <string name="string_delete">Delete</string>
    <string name="string_search_list">Search Result</string>





    <string name="admob_app_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_home_footer">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_full_screen">ca-app-pub-3940256099942544/6300978111</string>
    <string name="rewarded_video">ca-app-pub-3940256099942544/6300978111</string>

    <string name="string_addtest_device">C04B1BFFB0774708339BC273F8A43708</string>
    <string name="results">Results</string>
    <string name="google">Google</string>


</resources>
