<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.gajananmotors.shopfinder.activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@drawable/background"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:orientation="vertical">

                <com.gajananmotors.shopfinder.helper.CircleImageView
                    android:id="@+id/imgProfile"
                    androidutlineProvider="bounds"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_account_circle_black_24dp"
                    app:civ_border_width="1dp"
                    app:civ_fill_color="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="10dp"
                    android:hint="@string/String_Name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="#ffffff"
                    android:textColorHint="#dadada" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/String_Email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="#ffffff"
                    android:textColorHint="#dadada" />

                <EditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/side_margin"
                    android:editable="false"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:hint="@string/dateofbirth"
                    android:imeOptions="actionNext"
                    android:textColor="#ffffff"
                    android:textColorHint="#dadada" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_left_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_top_margin"
                        android:textColor="#dadada"
                        app:ccp_textSize="15sp" />

                    <EditText
                        android:id="@+id/etContactNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_left_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_top_margin"
                        android:digits="0123456789"
                        android:hint="@string/String_Contact_Number"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:textColor="#ffffff"
                        android:textColorHint="#dadada"
                        android:textSize="15sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/String_Password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textColor="#ffffff"
                    android:textColorHint="#dadada"
                    app:passwordToggleEnabled="true"
                    tools:ignore="MissingPrefix" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/String_Confirm_Password"
                    android:inputType="textPassword"
                    android:textColor="#ffffff"
                    android:textColorHint="#dadada" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginRight="90dp"
                    android:background="@drawable/my_button_bg"
                    android:paddingBottom="-1050dp"
                    android:paddingTop="-1050dp"
                    android:text="@string/String_Submit"
                    android:textColor="@color/ButtonTextColor" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>
