<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:id="@+id/linear_layout">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:elevation="10dp"
        app:cardElevation="10dp">
        <!-- app:cardBackgroundColor="#f8f3f3"-->


        <!--<ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/background" />-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Login to Find a shop"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/activity_horizontal_left_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_top_margin"
                        app:ccp_textSize="15sp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"

                        android:layout_marginTop="@dimen/activity_horizontal_top_margin"
                        android:textColorHint="@android:color/black">

                        <EditText
                            android:id="@+id/etUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/side_margin"
                            android:digits="0123456789"
                            android:hint="@string/String_Contact_Number"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:textColor="@android:color/black"
                            android:textColorHint="#dadada"
                            android:textSize="15sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textColorHint="@android:color/black">
                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/side_margin"
                        android:hint="@string/String_password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/black"
                        android:textColorHint="#dadada" />
                </android.support.design.widget.TextInputLayout>

                    <ProgressBar
                        android:id="@+id/login_progressbar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:theme="@style/CircularProgress"
                        android:visibility="invisible"
                        android:layout_centerInParent="true" />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:weightSum="2">


                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="0dp"
                        android:layout_height="37dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/side_margin"
                        android:layout_weight="1"
                        android:background="@drawable/my_button_bg"
                        android:elevation="7dp"
                        android:paddingBottom="-16dp"
                        android:paddingLeft="36dp"
                        android:paddingRight="36dp"
                        android:paddingTop="-86dp"
                        android:text="@string/btn_register"
                        android:textColor="@color/ButtonTextColor" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="0dp"
                        android:layout_height="37dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/side_margin"
                        android:layout_weight="1"
                        android:background="@drawable/my_button_bg"
                        android:elevation="7dp"
                        android:paddingBottom="-16dp"
                        android:paddingLeft="36dp"
                        android:paddingRight="36dp"
                        android:paddingTop="-86dp"
                        android:text="@string/btn_login"
                        android:textColor="@color/ButtonTextColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="0.1dp"
                        android:layout_marginLeft="36dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:background="@android:color/black" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="OR"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="0.1dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="36dp"
                        android:layout_weight="1"
                        android:background="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:weightSum="2">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/login_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="13dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="14dp"
                        android:layout_weight="1"
                        android:elevation="7dp"
                        android:paddingBottom="6dp"
                        android:paddingTop="7dp"
                        app:com_facebook_login_text="Sign In" />

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/btnSignIn"
                        android:layout_width="0dp"
                        android:layout_height="39dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/side_margin"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>


</LinearLayout>
